# email_api

./: .env.example  .env.test  .gitignore  .tool-versions  README.md  conftest.py  pyproject.toml
email_api/: api.py  models.py
lib/: __init__.py  api.py  mailer.py  mailers.py  mailgun.py  sendgrid.py
src/: scripts.py
tests/: api_test.py  mailers_test.py  mailgun_test.py  sendgrid_test.py
tests/cassettes/mailers_test/: test_mailgun_send_mail_success.yaml  test_sendgrid_send_mail_success.yaml
