[tool.poetry]
name = "email_api"
version = "0.1.0"
description = ""
authors = ["Jake Romer <jake@jmromer.org>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"
fastapi = "^0.80.0"
requests = "^2.28.1"
ujson = "^5.4.0"
uvicorn = "^0.18.3"
email-validator = "^1.2.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
autoflake8 = "^0.4.0"
autopep8 = "^1.7.0"
vcrpy = "^4.2.0"
httpx = "^0.23.0"
anyio = "^3.6.1"
trio = "^0.21.0"
pytest-recording = "^0.12.1"
pytest-mock = "^3.8.2"
ipdb = "^0.13.9"

[tool.pytest.ini_options]
minversion = 6.0
addopts = "-ra --quiet --block-network --record-mode=once"
required_plugins = ["pytest-recording", "pytest-mock"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
